[package]
name = "nss-netns"
version = "0.1.0"
edition = "2021"

[lib]
name = "nss_netns"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"

[profile.release.package."*"]
opt-level = "z"

[dependencies]
libnss = "0.4.0"
paste = "0.1"
libc = "0.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
